feat: Compatibility with java 11